nenolod     2007/05/19 06:30:38 UTC	(20070519-8277)
  Log:
  - ok, really make this chanserv: stuff work
  

  Changes:	Modified:
  +28 -3	trunk/modules/chanserv/main.c (File Modified) 


nenolod     2007/05/19 05:34:42 UTC	(20070519-8275)
  Log:
  - fix "ChanServ:" commands
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/main.c (File Modified) 


nenolod     2007/05/19 05:31:46 UTC	(20070519-8273)
  Log:
  - unbreak !commands
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/main.c (File Modified) 


nenolod     2007/05/19 05:16:25 UTC	(20070519-8271)
  Log:
  - allow ChanServ to be addressed by name, e.g. "ChanServ: kick nenolod foobarbaz"
  

  Changes:	Modified:
  +4 -2		trunk/modules/chanserv/main.c (File Modified) 


nenolod     2007/05/19 00:32:20 UTC	(20070519-8269)
  Log:
  - these were outdated like whoa
  

  Changes:	Modified:
  +52 -44	trunk/INSTALL (File Modified) 
  +34 -32	trunk/README (File Modified) 


jilles      2007/05/17 23:57:54 UTC	(20070517-8267)
  Log:
  Add alis (advanced list service) from atheme-modules,
  fixed so it works with current atheme and has a full copy
  of the ratbox-services copyright notice.
  

  Changes:	Modified:
  +1 -0		trunk/contrib/Makefile.in (File Modified) 
  +418 -0	trunk/contrib/ircd_alis.c (File Added) 


jilles      2007/05/17 23:06:48 UTC	(20070517-8265)
  Log:
  For ircds that use a umode for registered nicks, also set
  and recognize (if implemented) that umode for grouped
  nicks other than the account name. Also make the code for
  this clearer using the new should_reg_umode() function.
  Note that MU_NOBURSTLOGIN protection is per account, not
  per nick, so it will not work as well.
  

  Changes:	Modified:
  +14 -13	trunk/modules/protocol/bahamut.c (File Modified) 
  +15 -13	trunk/modules/protocol/dreamforge.c (File Modified) 
  +11 -11	trunk/modules/protocol/hyperion.c (File Modified) 
  +15 -14	trunk/modules/protocol/officeirc.c (File Modified) 